# Robomaster2018-sentry-vision

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
MVCamera/: .gitignore  README.md
MVCamera/camera_config/: MV-UB31-Group0.config
MVCamera/include/: CameraDefine.h  MVCamera.h
MVCamera/src/: MVCamera.cpp  main.cpp  setwb.cpp  test_MVCamera.cpp
RoboMasterMarkerDetector3/: .gitignore  README.md  main.cpp
RoboMasterMarkerDetector3/calibration/: calibration.yml  calibration_bubing2_70_16_9_640_360.yml  calibration_l_1_16_9_640_360.yml  calibration_mvcamera.yml  calibration_mvcamera_shaobing.yml  calibration_s_2.yml
RoboMasterMarkerDetector3/cascades/: cascade_1.xml  cascade_2.xml  cascade_3.xml  cascade_5.xml
RoboMasterMarkerDetector3/config/: marker_config.yml
RoboMasterMarkerDetector3/include/: MarkerParams.h  MarkerSensor.h  Timer.h
RoboMasterMarkerDetector3/src/: MarkerParams.cpp  MarkerSensor.cpp
RoboMasterMarkerDetector3/thirdpart/KCFTracker/: kcftracker.cpp  kcftracker.hpp  tracker.h
include/: RemoteControl.h  RoboMasterProcess.h  can.h  setting.h
scripts/: build.sh  load_can.sh  plot_angles.sh  readme.txt  run.sh
src/: RemoteControl.cpp  RoboMasterProcess.cpp  can.cpp
